style: correct the vertical spacing for cards on larger screens
96px above tags, 24px under tags, 120px to fill out the bottom of the
card

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -460,9 +460,14 @@ header {
     margin: 0;
 }
 
+
 @media screen and (min-width: 992px) {
     .w-md-50 {
         width: 50% !important;
+    }
+
+    .mb-lg-6 {
+        margin-bottom: calc(96rem / 16) !important;
     }
 }
 
